--- a/src/app/authentication/register/register.component.html
+++ b/src/app/authentication/register/register.component.html
@@ -3,10 +3,10 @@
   <h2>Register user</h2>
 
   <div class="register-body">
-    <div class="register-body-client" *ngIf="clientCodePage">
+    <div class="register-body-client" *ngIf="credentialsPage">
       <form
         class="register-body-form"
-        [formGroup]="clientForm"
+        [formGroup]="credentialsForm"
         (ngSubmit)="firstSubmit()"
       >
         <div class="register-body-field-container">
@@ -14,7 +14,7 @@
             <mat-label>First Name</mat-label>
             <input matInput formControlName="firstName" required type="text" />
             <mat-error
-              *ngIf="clientForm.controls['firstName'].hasError('pattern')"
+              *ngIf="credentialsForm.controls['firstName'].hasError('pattern')"
             >
               Invalid input
             </mat-error>
@@ -26,7 +26,7 @@
             <mat-label>Last Name</mat-label>
             <input matInput formControlName="lastName" required type="text" />
             <mat-error
-              *ngIf="clientForm.controls['lastName'].hasError('pattern')"
+              *ngIf="credentialsForm.controls['lastName'].hasError('pattern')"
             >
               Invalid input
             </mat-error>
@@ -37,7 +37,7 @@
           <mat-form-field class="register-body-field" appearance="outline">
             <mat-label>Email</mat-label>
             <input matInput formControlName="email" required type="email" />
-            <mat-error *ngIf="clientForm.controls['email'].hasError('email')">
+            <mat-error *ngIf="credentialsForm.controls['email'].hasError('email')">
               Invalid email address
             </mat-error>
           </mat-form-field>
@@ -50,34 +50,16 @@
               matInput
               formControlName="clientCode"
               required
-              type="number"
+              type="text"
             />
             <mat-error
-              *ngIf="clientForm.controls['clientCode'].hasError('pattern')"
+              *ngIf="credentialsForm.controls['clientCode'].hasError('pattern')"
             >
               Invalid client code
             </mat-error>
           </mat-form-field>
         </div>
 
-        <button
-          class="register-body-form-submit"
-          mat-raised-button
-          type="submit"
-          [disabled]="clientForm.invalid"
-        >
-          Continue
-        </button>
-      </form>
-    </div>
-
-    <div class="register-body-password" *ngIf="passwordPage">
-      <h3>Choose a password</h3>
-      <form
-        class="register-body-form"
-        [formGroup]="passwordForm"
-        (ngSubmit)="secondSubmit()"
-      >
         <div class="register-body-field-container">
           <mat-form-field class="register-body-field" appearance="outline">
             <mat-label>Password</mat-label>
@@ -88,7 +70,7 @@
               type="password"
             />
             <mat-error
-              *ngIf="passwordForm.controls['password'].hasError('minlength')"
+              *ngIf="credentialsForm.controls['password'].hasError('minlength')"
             >
               Password should be at least 8 characters long
             </mat-error>
@@ -106,7 +88,7 @@
             />
             <mat-error
               *ngIf="
-                passwordForm.controls['repeatPassword'].hasError(
+                credentialsForm.controls['repeatPassword'].hasError(
                   'passwordMismatch'
                 )
               "
@@ -116,11 +98,15 @@
           </mat-form-field>
         </div>
 
+        <div class="register-body-form-error" *ngIf="userCredentialsError">A user with these credentials already exists</div>
+
+
         <button
           class="register-body-form-submit"
           mat-raised-button
           type="submit"
-          [disabled]="passwordForm.invalid"
+          color="primary"
+          [disabled]="credentialsForm.invalid"
         >
           Continue
         </button>
@@ -166,7 +152,7 @@
         <div class="register-body-field-container">
           <mat-form-field class="register-body-field" appearance="outline">
             <mat-label>Identity number</mat-label>
-            <input matInput formControlName="cnp" required type="number" />
+            <input matInput formControlName="cnp" required type="text" />
             <mat-error
               *ngIf="
                 personalDataForm.controls['cnp'].hasError('pattern') ||
@@ -174,25 +160,6 @@
               "
             >
               Invalid id
-            </mat-error>
-          </mat-form-field>
-        </div>
-
-        <div class="register-body-field-container">
-          <mat-form-field class="register-body-field" appearance="outline">
-            <mat-label>Postal Code</mat-label>
-            <input
-              matInput
-              formControlName="postalCode"
-              required
-              type="number"
-            />
-            <mat-error
-              *ngIf="
-                personalDataForm.controls['postalCode'].hasError('pattern')
-              "
-            >
-              Invalid pattern
             </mat-error>
           </mat-form-field>
         </div>
@@ -219,7 +186,7 @@
               matInput
               formControlName="phoneNumber"
               required
-              type="number"
+              type="text"
             />
             <mat-error
               *ngIf="
@@ -261,7 +228,7 @@
               matInput
               formControlName="postalCode"
               required
-              type="number"
+              type="text"
             />
             <mat-error
               *ngIf="
@@ -273,10 +240,13 @@
           </mat-form-field>
         </div>
 
+        <div  class="register-body-form-error" *ngIf="cnpAlreadyExistsError">A user with this identity number already exists</div>
+
         <button
           class="register-body-form-submit"
           mat-raised-button
           type="submit"
+          color="primary"
           [disabled]="personalDataForm.invalid"
         >
           Register
