authentication page start

--- a/src/app/profile/personal-profile/personal-profile.component.html
+++ b/src/app/profile/personal-profile/personal-profile.component.html
@@ -1,1 +1,7 @@
 <p>personal-profile works!</p>
+
+<div class="personal-profile">
+  <div *ngIf="currentUser$ | async as user">
+    <input >
+  </div>
+</div>
