add services and components for dashboard, announcements, service request and tracking

--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -3,15 +3,28 @@
   /*display: flex;*/
   flex-direction: column;
   align-items: center;
+  margin: auto;
 }
 
-dashboard-line {
-
+.dashboard-line {
+  display: inline-flex;
+  width: 100%;
+  /*flex: 4;*/
 }
 
 .dashboard-card {
-  width: 300px;
-  margin: 20px;
+  width: 35%;
+  margin: 0 20px;
+}
+
+.dashboard-bar {
+  margin: auto;
+  width: 95%;
+}
+
+.dashboard-pie{
+  width: 45%;
+  margin: auto;
 }
 
 canvas {
