--- a/src/app/components/announcements/announcements.component.html
+++ b/src/app/components/announcements/announcements.component.html
@@ -11,15 +11,20 @@
     <mat-card *ngFor="let announcement of (announcements$ | async)" class="announcement-card">
       <mat-card-header>
         <mat-card-title>{{ announcement.title }}</mat-card-title>
-        <mat-card-subtitle>{{ announcement.createdAt }}</mat-card-subtitle>
+        <mat-card-subtitle>{{ announcement.creationDate | date:'short' }}</mat-card-subtitle>
+        <mat-card-subtitle>Area Affected: {{ announcement.areaAffected }}</mat-card-subtitle>
       </mat-card-header>
       <mat-card-content>
-        <p *ngIf="!announcement.expanded">{{ announcement.content | truncate:300 }}<span >...</span></p>
-        <p *ngIf="announcement.expanded">{{ announcement.content }}</p>
-        <button mat-button color="primary" (click)="toggleContent(announcement)">
-          {{ announcement.expanded ? 'See Less' : 'See More' }}
+        <p *ngIf="!isExpanded(announcement.id || 1)">{{ announcement.content | truncate:300 }}<span >...</span></p>
+        <p *ngIf="isExpanded(announcement.id || 1)">{{ announcement.content }}</p>
+        <button mat-button color="primary" (click)="toggleExpanded(announcement.id || 1)">
+          {{ isExpanded(announcement.id || 1) ? 'See Less' : 'See More' }}
         </button>
       </mat-card-content>
+      <mat-card-footer>
+        <!--<p><strong>Category:</strong> {{ announcement.category }}</p>
+        <p><strong>Status:</strong> {{ announcement.status }}</p>-->
+      </mat-card-footer>
     </mat-card>
   </div>
 </div>
