--- a/src/app/components/track-requests/track-requests.component.html
+++ b/src/app/components/track-requests/track-requests.component.html
@@ -2,7 +2,43 @@
 
 <div class="track-requests">
   <h3>All Requests</h3>
-  <table mat-table [dataSource]="requests" class="mat-elevation-z8">
+
+  <div class="track-requests-filter-pannel mat-elevation-z8">
+    <mat-accordion>
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title>Filter your requests</mat-panel-title>
+        </mat-expansion-panel-header>
+
+        <form [formGroup]="filterForm" (ngSubmit)="loadServiceRequests()">
+          <mat-form-field appearance="outline">
+            <mat-label>Status</mat-label>
+            <mat-select formControlName="status">
+              <mat-option *ngFor="let status of statuses" [value]="status.toUpperCase()">{{ status }}</mat-option>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-form-field appearance="outline">
+            <mat-label>Priority</mat-label>
+            <mat-select formControlName="priority">
+              <mat-option *ngFor="let priority of priorities" [value]="priority.toUpperCase()">{{ priority }}</mat-option>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-form-field appearance="outline">
+            <mat-label>Location</mat-label>
+            <input matInput formControlName="city">
+          </mat-form-field>
+
+          <button mat-raised-button type="submit" color="primary">Filter</button>
+          <button mat-stroked-button color="primary" (click)="clearFilters()">Clear</button>
+        </form>
+      </mat-expansion-panel>
+    </mat-accordion>
+  </div>
+
+
+  <table mat-table [dataSource]="(requests$ | async) || []" class="mat-elevation-z8">
   <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef> ID </th>
     <td mat-cell *matCellDef="let request">
@@ -15,17 +51,22 @@
     <td mat-cell *matCellDef="let request"> {{ request.type }} </td>
   </ng-container>
 
+  <ng-container matColumnDef="priority">
+    <th mat-header-cell *matHeaderCellDef> Priority </th>
+    <td mat-cell *matCellDef="let request"> {{ request.priority | priorityTransform }} </td>
+  </ng-container>
+
   <ng-container matColumnDef="status">
     <th mat-header-cell *matHeaderCellDef> Status </th>
-    <td mat-cell *matCellDef="let request"> {{ request.status }} </td>
+    <td mat-cell *matCellDef="let request"> {{ request.status | statusTransform}} </td>
   </ng-container>
 
   <ng-container matColumnDef="date">
     <th mat-header-cell *matHeaderCellDef> Creation Date </th>
-    <td mat-cell *matCellDef="let request"> {{ request.date }} </td>
+    <td mat-cell *matCellDef="let request"> {{ request.creationDate | date:'short' }} </td>
   </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="['id', 'type', 'status', 'date']"></tr>
-  <tr mat-row *matRowDef="let row; columns: ['id', 'type', 'status', 'date'];"></tr>
+  <tr mat-header-row *matHeaderRowDef="['id', 'type', 'priority', 'status', 'date']"></tr>
+  <tr mat-row *matRowDef="let row; columns: ['id', 'type', 'priority', 'status', 'date'];"></tr>
 </table>
 </div>
