--- a/src/app/components/announcements/announcements.component.css
+++ b/src/app/components/announcements/announcements.component.css
@@ -11,3 +11,36 @@
 .announcement-card {
   margin-bottom: 15px;
 }
+
+mat-panel-title {
+  font-size: 20px;
+  height: 80px;
+}
+
+mat-expansion-panel-header {
+  height: 60px;
+}
+
+.mat-elevation-z8 {
+  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),
+  0px 8px 10px 1px rgba(0, 0, 0, 0.14),
+  0px 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.announcement-form-title {
+  .title {
+    width: 30%;
+    margin: 0 10px;
+  }
+}
+
+.announcement-form-content {
+  mat-form-field {
+    width: 75%;
+    margin-left: 10px;
+  }
+
+  textarea {
+    height: 200px;
+  }
+}
