--- a/src/app/components/announcements/announcements.component.css
+++ b/src/app/components/announcements/announcements.component.css
@@ -32,6 +32,8 @@ mat-expansion-panel-header {
     width: 30%;
     margin: 0 10px;
   }
+
+  margin-bottom: 10px;
 }
 
 .announcement-form-content {
@@ -43,4 +45,10 @@ mat-expansion-panel-header {
   textarea {
     height: 200px;
   }
+
+  margin-bottom: 10px;
+}
+
+.announcement-form-submit {
+  margin-left: 10px;
 }
