--- a/src/app/components/profile/profile/profile.component.css
+++ b/src/app/components/profile/profile/profile.component.css
@@ -1,4 +1,8 @@
 .profile-component {
-    width: 90%;
-    margin: auto;
+  width: 90%;
+  margin: auto;
+}
+
+mat-select[disabled] {
+  color: rgba(0, 0, 0, 0.38); /* Style the disabled state */
 }
