--- a/src/app/components/track-requests/track-requests.component.css
+++ b/src/app/components/track-requests/track-requests.component.css
@@ -1,24 +1,29 @@
 .track-requests {
-    width: 90%;
-    justify-content: center;
-    margin: auto;
+  width: 90%;
+  justify-content: center;
+  margin: auto;
 }
 
 .track-requests-filter-pannel {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 mat-panel-title {
-    font-size: 20px;
-    height: 80px;
+  font-size: 20px;
+  height: 80px;
 }
+
 mat-expansion-panel-header {
-    height: 60px;
+  height: 60px;
 }
 
 .mat-elevation-z8 {
-    box-shadow:
-        0px 5px 5px -3px rgba(0, 0, 0, 0.2),
-        0px 8px 10px 1px rgba(0, 0, 0, 0.14),
-        0px 3px 14px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),
+  0px 8px 10px 1px rgba(0, 0, 0, 0.14),
+  0px 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.observations {
+  width: 40%;
+  padding: 20px 10px;
 }
