--- a/src/app/components/track-requests/track-requests.component.html
+++ b/src/app/components/track-requests/track-requests.component.html
@@ -1,7 +1,7 @@
 <p>track-requests works!</p>
 
 <div class="track-requests">
-  <h3>All Requests</h3>
+  <h2>Your requests</h2>
 
   <div class="track-requests-filter-pannel mat-elevation-z8">
     <mat-accordion>
@@ -21,13 +21,16 @@
           <mat-form-field appearance="outline">
             <mat-label>Priority</mat-label>
             <mat-select formControlName="priority">
-              <mat-option *ngFor="let priority of priorities" [value]="priority.toUpperCase()">{{ priority }}</mat-option>
+              <mat-option *ngFor="let priority of priorities" [value]="priority.toUpperCase()">{{ priority }}
+              </mat-option>
             </mat-select>
           </mat-form-field>
 
-          <mat-form-field appearance="outline">
+          <mat-form-field class="form-container-field" appearance="outline">
             <mat-label>Location</mat-label>
-            <input matInput formControlName="city">
+            <mat-select formControlName="location">
+              <mat-option *ngFor="let area of sharedService.getAreas" [value]="area.value">{{ area.label }}</mat-option>
+            </mat-select>
           </mat-form-field>
 
           <button mat-raised-button type="submit" color="primary">Filter</button>
@@ -39,34 +42,52 @@
 
 
   <table mat-table [dataSource]="(requests$ | async) || []" class="mat-elevation-z8">
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef> ID </th>
-    <td mat-cell *matCellDef="let request">
-      <a (click)="selectRequest(request)">{{ request.id }}</a>
-    </td>
-  </ng-container>
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef> ID</th>
+      <td mat-cell *matCellDef="let request">
+        <a href="javascript:void(0)" (click)="openModal(request, false)">{{ request.id }}</a>
+      </td>
+    </ng-container>
 
-  <ng-container matColumnDef="type">
-    <th mat-header-cell *matHeaderCellDef> Type </th>
-    <td mat-cell *matCellDef="let request"> {{ request.type }} </td>
-  </ng-container>
+    <ng-container matColumnDef="type">
+      <th mat-header-cell *matHeaderCellDef> Type</th>
+      <td mat-cell *matCellDef="let request"> {{ request.type }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="priority">
-    <th mat-header-cell *matHeaderCellDef> Priority </th>
-    <td mat-cell *matCellDef="let request"> {{ request.priority | priorityTransform }} </td>
-  </ng-container>
+    <ng-container matColumnDef="priority">
+      <th mat-header-cell *matHeaderCellDef> Priority</th>
+      <td mat-cell *matCellDef="let request"> {{ request.priority | priorityTransform }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="status">
-    <th mat-header-cell *matHeaderCellDef> Status </th>
-    <td mat-cell *matCellDef="let request"> {{ request.status | statusTransform}} </td>
-  </ng-container>
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef> Status</th>
+      <td mat-cell *matCellDef="let request"> {{ request.status | statusTransform }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="date">
-    <th mat-header-cell *matHeaderCellDef> Creation Date </th>
-    <td mat-cell *matCellDef="let request"> {{ request.creationDate | date:'short' }} </td>
-  </ng-container>
+    <ng-container matColumnDef="date">
+      <th mat-header-cell *matHeaderCellDef> Creation Date</th>
+      <td mat-cell *matCellDef="let request"> {{ request.creationDate | date:"d MMMM y HH:mm" }}</td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="['id', 'type', 'priority', 'status', 'date']"></tr>
-  <tr mat-row *matRowDef="let row; columns: ['id', 'type', 'priority', 'status', 'date'];"></tr>
-</table>
+
+    <ng-container matColumnDef="observations">
+      <th mat-header-cell *matHeaderCellDef> Observations</th>
+      <td mat-cell class="observations" *matCellDef="let request"> {{ request.observations }}</td>
+    </ng-container>
+
+    <!--   ng if role = employee -->
+    <ng-container *ngIf="sharedService.isEmployee || sharedService.isAdmin" matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef> Actions</th>
+      <td mat-cell *matCellDef="let request">
+        <button mat-icon-button color="primary" (click)="openModal(request, true)">
+          <mat-icon>edit</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+
+    <tr mat-header-row *matHeaderRowDef="headers"></tr>
+    <tr mat-row
+        *matRowDef="let row; columns: headers;"></tr>
+  </table>
 </div>
