--- a/src/app/components/track-requests/track-requests.component.html
+++ b/src/app/components/track-requests/track-requests.component.html
@@ -1,93 +1,114 @@
-<p>track-requests works!</p>
-
-<div class="track-requests">
-  <h2>Your requests</h2>
-
-  <div class="track-requests-filter-pannel mat-elevation-z8">
-    <mat-accordion>
-      <mat-expansion-panel>
-        <mat-expansion-panel-header>
-          <mat-panel-title>Filter your requests</mat-panel-title>
-        </mat-expansion-panel-header>
-
-        <form [formGroup]="filterForm" (ngSubmit)="loadServiceRequests()">
-          <mat-form-field appearance="outline">
-            <mat-label>Status</mat-label>
-            <mat-select formControlName="status">
-              <mat-option *ngFor="let status of statuses" [value]="status.toUpperCase()">{{ status }}</mat-option>
-            </mat-select>
-          </mat-form-field>
-
-          <mat-form-field appearance="outline">
-            <mat-label>Priority</mat-label>
-            <mat-select formControlName="priority">
-              <mat-option *ngFor="let priority of priorities" [value]="priority.toUpperCase()">{{ priority }}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-
-          <mat-form-field class="form-container-field" appearance="outline">
-            <mat-label>Location</mat-label>
-            <mat-select formControlName="location">
-              <mat-option *ngFor="let area of sharedService.getAreas" [value]="area.value">{{ area.label }}</mat-option>
-            </mat-select>
-          </mat-form-field>
-
-          <button mat-raised-button type="submit" color="primary">Filter</button>
-          <button mat-stroked-button color="primary" (click)="clearFilters()">Clear</button>
-        </form>
-      </mat-expansion-panel>
-    </mat-accordion>
+<!--<p>track-requests works!</p>-->
+<ng-container *ngIf="loading$ | async; else loadedPage">
+  <div class="d-flex justify-content-center mt-4">
+    <div class="spinner-border" role="status">
+      <span class="visually-hidden">Loading...</span>
+    </div>
   </div>
+</ng-container>
+
+<ng-template #loadedPage>
+  <div class="track-requests">
+    <h1>Your requests</h1>
+    <div
+      class="track-requests-btn-create">
+      <button
+        mat-raised-button
+        color="primary"
+        (click)="createRequest()"
+      >
+        Create a new request
+      </button>
+    </div>
+    <div class="track-requests-filter-pannel mat-elevation-z8">
+      <mat-accordion>
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>Filter your requests</mat-panel-title>
+          </mat-expansion-panel-header>
+
+          <form [formGroup]="filterForm" (ngSubmit)="loadServiceRequests()">
+            <div>
+              <mat-form-field class="track-requests-filter-field" appearance="outline">
+                <mat-label>Status</mat-label>
+                <mat-select formControlName="status">
+                  <mat-option *ngFor="let status of statuses" [value]="status.toUpperCase()">{{ status }}</mat-option>
+                </mat-select>
+              </mat-form-field>
+
+              <mat-form-field class="track-requests-filter-field" appearance="outline">
+                <mat-label>Priority</mat-label>
+                <mat-select formControlName="priority">
+                  <mat-option *ngFor="let priority of priorities" [value]="priority.toUpperCase()">{{ priority }}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+
+              <mat-form-field class="track-requests-filter-field" appearance="outline">
+                <mat-label>Location</mat-label>
+                <mat-select formControlName="location">
+                  <mat-option *ngFor="let area of sharedService.getAreas" [value]="area.value">{{ area.label }}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+            <button mat-raised-button class="track-requests-filter-btn" type="submit" color="primary">Filter</button>
+            <button mat-stroked-button class="track-requests-filter-btn" color="primary" (click)="clearFilters()">Clear
+            </button>
+          </form>
+        </mat-expansion-panel>
+      </mat-accordion>
+    </div>
 
 
-  <table mat-table [dataSource]="(requests$ | async) || []" class="mat-elevation-z8">
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> ID</th>
-      <td mat-cell *matCellDef="let request">
-        <a href="javascript:void(0)" (click)="openModal(request, false)">{{ request.id }}</a>
-      </td>
-    </ng-container>
+    <table mat-table [dataSource]="(requests$ | async) || []" class="mat-elevation-z8">
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> ID</th>
+        <td mat-cell *matCellDef="let request">
+          <a href="javascript:void(0)" (click)="openModal(request, false)">{{ request.id }}</a>
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="type">
-      <th mat-header-cell *matHeaderCellDef> Type</th>
-      <td mat-cell *matCellDef="let request"> {{ request.type }}</td>
-    </ng-container>
+      <ng-container matColumnDef="type">
+        <th mat-header-cell *matHeaderCellDef> Type</th>
+        <td mat-cell *matCellDef="let request"> {{ sharedService.getTypeLabel(request.type) }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="priority">
-      <th mat-header-cell *matHeaderCellDef> Priority</th>
-      <td mat-cell *matCellDef="let request"> {{ request.priority | priorityTransform }}</td>
-    </ng-container>
+      <ng-container matColumnDef="priority">
+        <th mat-header-cell *matHeaderCellDef> Priority</th>
+        <td mat-cell *matCellDef="let request"> {{ request.priority | priorityTransform }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef> Status</th>
-      <td mat-cell *matCellDef="let request"> {{ request.status | statusTransform }}</td>
-    </ng-container>
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef> Status</th>
+        <td mat-cell *matCellDef="let request"> {{ request.status | statusTransform }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef> Creation Date</th>
-      <td mat-cell *matCellDef="let request"> {{ request.creationDate | date:"d MMMM y HH:mm" }}</td>
-    </ng-container>
-
-
-    <ng-container matColumnDef="observations">
-      <th mat-header-cell *matHeaderCellDef> Observations</th>
-      <td mat-cell class="observations" *matCellDef="let request"> {{ request.observations }}</td>
-    </ng-container>
-
-    <!--   ng if role = employee -->
-    <ng-container *ngIf="sharedService.isEmployee || sharedService.isAdmin" matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef> Actions</th>
-      <td mat-cell *matCellDef="let request">
-        <button mat-icon-button color="primary" (click)="openModal(request, true)">
-          <mat-icon>edit</mat-icon>
-        </button>
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef> Creation Date</th>
+        <td mat-cell *matCellDef="let request"> {{ request.creationDate | date:"d MMMM y HH:mm" }}</td>
+      </ng-container>
 
 
-    <tr mat-header-row *matHeaderRowDef="headers"></tr>
-    <tr mat-row
-        *matRowDef="let row; columns: headers;"></tr>
-  </table>
-</div>
+      <ng-container matColumnDef="observations">
+        <th mat-header-cell *matHeaderCellDef> Observations</th>
+        <td mat-cell class="observations" *matCellDef="let request"> {{ request.observations }}</td>
+      </ng-container>
+
+      <!--   ng if role = employee -->
+      <ng-container *ngIf="sharedService.isEmployee || sharedService.isAdmin" matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef> Actions</th>
+        <td mat-cell *matCellDef="let request">
+          <button mat-icon-button color="primary" (click)="openModal(request, true)">
+            <mat-icon>edit</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
+
+      <tr mat-header-row *matHeaderRowDef="headers"></tr>
+      <tr mat-row
+          *matRowDef="let row; columns: headers;"></tr>
+    </table>
+  </div>
+</ng-template>
