--- a/src/app/navigation/navbar/navbar.component.html
+++ b/src/app/navigation/navbar/navbar.component.html
@@ -4,7 +4,7 @@
   <div fxFlex fxLayoutAlign="flex-end">
     <div class="navButton" *ngIf="(isAuth$ | async)" (click)="goToProfile()">Profile</div>
     <div class="navButton" *ngIf="(isAuth$ | async)" (click)="goToPayments()">Payments</div>
-    <div class="navButton" *ngIf="(isAuth$ | async)" (click)="goToServiceRequest()">Request</div>
+    <div class="navButton" *ngIf="(isAuth$ | async)" (click)="goToServiceRequest()">Requests</div>
     <div class="navButton" *ngIf="(isAuth$ | async)" (click)="goToAnnouncements()">Announcements</div>
     <div class="navButton" *ngIf="(isAuth$ | async)" (click)="goToDashboard()">Dashboard</div>
     <div class="navButton" *ngIf="(isAuth$ | async)" (click)="logOut()">Log out</div>
